2019-05-07: Ver. 0.4-0
  * Fix check type for send/recv long vectors.

2019-04-07: Ver. 0.4-0
  * Add "insta/mpi_valgrind" for checking and comparing memory lost, etc.

2019-02-23: Ver. 0.3-9
  * Add IBM MPI support for summit.

2019-01-20: Ver. 0.3-9
  * Migrate float32 class to float package via import in NAMESPACE.
  * Export `get.conf()`, `get.lib()`, and `get.sysenv()`.

2018-09-21: Ver. 0.3-9
  * Adjust "get.mpi.comm.ptr()" and "addr.mpi.comm.ptr()" and their C codes.
  * Add a test example "inst/tests/mpi_comm_ptr.r".

2018-08-22: Ver. 0.3-9
  * Fix examples and add man helps for the new "send()" and "recv()".

2018-08-21: Ver. 0.3-9
  * Add more "check.type()" for flexible "send()" and "recv()".
  * Change examples in "inst/" to force "check.type" as FALSE wherever
    "send/recv" and "isend/irecv" are involved.

2018-08-12: Ver. 0.3-9
  * Add "get.mpi.comm.ptr()" and "addr.mpi.comm.ptr()" to get MPI_COMM pointers.
  * Add C combine R example in "inst/".
  * Add more flexible "send()" and "recv()".

2018-08-03: Ver. 0.3-8
  * Fedora28 use "module load mpi/openmpi-x86_64" to obtain mpiexec.
  * Roll back partially to Ver. 0.3-6 because pkg-config may give linking order
    differently that may triggle some dynamic loading problems.

2018-07-29: Ver. 0.3-7
  * Add "pkg-config" to "configure.ac".
  * Check "OpenMPI" and "MPICH2" with "pkg-config".

2018-05-18: Ver. 0.3-6
  * Move "rlecuyer" to Imports.

2018-04-30: Ver. 0.3-6
  * Change some problems related UTF-8, latin1 TeX inputs, especially for
    TeXLive 2018.

2018-02-25: Ver. 0.3-5
  * Fix execmpi().
  * system(wait = FALSE) doesn't work with MPI correctly in Unix-alike systems.
  * Execute MPI in background and dump the results to the log file.
  * Read the results back in from the log file when the job is complete.
  * Windows system can not do the background job, but wait = TRUE is fine.

2018-02-17: Ver. 0.3-5
  * Add execmpi().

2017-12-12: Ver. 0.3-4
  * Added comm.localrank().
