@@ -1,5 +1,7 @@
 2019-05-07: Ver. 0.4-0
   * Fix check type for send/recv long vectors.
+  * Fix `isent()` by adding `spmd.check.type.send()` which is needed
+    by `recv()` for handshaking.
 
 2019-04-07: Ver. 0.4-0
   * Add "insta/mpi_valgrind" for checking and comparing memory lost, etc.
